examples/test/testpolicy9714.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9714
  namespace: namespace357
spec:
  podSelector:
    matchLabels:
      key35: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value47
          key36: value7
          key26: value10
      podSelector:
        matchLabels:
          key13: value11
